# dvvidget

./: Cargo.toml  README.md  install.sh
src/: config.toml  main.rs  style.css  utils.rs
src/cli/: args.rs  cli.rs  client.rs  mod.rs  send.rs
src/daemon/: daemon.rs  file.rs  init.rs  mod.rs  server.rs  structs.rs
src/daemon/notification/: denote.rs  mod.rs  server.rs
src/daemon/renderer/: a  app.rs  bri.rs  config.rs  dock.rs  dvoty.rs  mod.rs  paths.rs  popup.rs  renderer.rs  style.css  vol.rs  window.rs
src/daemon/renderer/dvoty/: app_launcher.rs  base.rs  class.rs  cmd.rs  entry.rs  event.rs  files.rs  general.rs  input.rs  instruction.rs  letter.rs  math.rs  mod.rs  row.rs  search.rs  url.rs  utils.rs
