[package]
name = "dvvidget"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4-layer-shell = "0.4.0"
gtk4 = "0.9.0"
glib = "0.20.0"
gio = "0.20.0"
gdk4 = "0.9.0"

serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5.10", features = ["derive"] }
tokio = { version = "1.39.1", features = ["full"] }
simple-signal = "1.1.1"
once_cell = "1.19.0"
anyhow = "1.0"
toml = "0.8.19"
